--- a/vision.html
+++ b/vision.html
@@ -9,22 +9,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--
-    - Title
-  -->
-  <title>Photon - Sudanese Physics Community</title>
-
-  <!-- 
-    - css link
-  -->
+  
   <link rel="stylesheet" href="./settings/CSS/style.css">
 
   <!--
     - fav icons
   -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="./settings/images/site.webmanifest">
 
   <!-- 
@@ -37,51 +30,21 @@
     rel="stylesheet">
 </head>
 
-
-<body class="dark_theme">
-  <!--
-    header
-  -->
-  <header class="header" data-header>
-    <div class="container">
-      <!--logo-->
-      <h1 class="logo">
-        <a href="#">Photon<span>.</span></a>
-      </h1>
-
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-      </button>
-
-      <!--tabs-->
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-          <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
-          </li>
-          <li>
-            <a href="./upcoming.html" class="navbar-link">Up-coming Events.</a>
-          </li>
-          <li>
-            <a href="./past.html" class="navbar-link">Archive.</a>
-          </li>
-          <li>
-            <a href="./about.html" class="navbar-link">About Us.</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-
-  <!--
-    - Js link
-  -->
-  <script src="./settings/JS/script.js"></script>
 </body>
+</section>
+                    <section id="tab2" class="navbar-link" >
+                        <h3 class="head-vl">Vision and Mission</h3>
+			    <div style="text-align: justify">
+                        <p> Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
+				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
+				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
+			    </p>
+				      </div>
+                        </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+                      
+                    </section>
 
 
 <main>
