--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--
-    - Title
-  -->
-  <title>Photon - Sudanese Physics Community</title>
-
-  <!-- 
-    - css link
-  -->
+ 
   <link rel="stylesheet" href="./settings/CSS/style.css">
 
   <!--
     - fav icons
   -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
-  <link rel="manifest" href="./settings/images/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- 
     - font link
@@ -37,52 +30,10 @@
     rel="stylesheet">
 </head>
 
-
-<body class="dark_theme">
-  <!--
-    header
-  -->
-  <header class="header" data-header>
-    <div class="container">
-      <!--logo-->
-      <h1 class="logo">
-        <a href="#">Photon<span>.</span></a>
-      </h1>
-
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-      </button>
-
-      <!--tabs-->
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-          <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
-          </li>
-          <li>
-            <a href="./upcoming.html" class="navbar-link">Up-coming Events.</a>
-          </li>
-          <li>
-            <a href="./past.html" class="navbar-link">Archive.</a>
-          </li>
-          <li>
-            <a href="./about.html" class="navbar-link">About Us.</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-
-  <!--
-    - Js link
-  -->
-  <script src="./settings/JS/script.js"></script>
 </body>
-
+ <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
+			<p> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
+                    </section>
 
 <main>
 </main>
