--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             
           </li>
           <li>
-             <label for="tab2"><a href="./upcoming.html" class="navbar-link">Vision and Mission</a></label>
+             <label for="tab2"><a href="./vision.html" class="navbar-link">Vision and Mission</a></label>
           </li>
           <li>
-             <label for="tab3"><a href="./past.html" class="navbar-link">Past and Up-coming Events</a></label>
+             <label for="tab3"><a href="./upcoming.html" class="navbar-link">Past and Up-coming Events</a></label>
           </li>
           <li>
-            <label for="tab4"><a href="./about.html" class="navbar-link">Services</a></label>
+            <label for="tab4"><a href="./services.html" class="navbar-link">Services</a></label>
 
           </li>
 		<li>
