--- a/upcoming.html
+++ b/upcoming.html
@@ -33,7 +33,7 @@
      
 </body>
 
-                    <section id="tab3" class="navbar-link">
+                    <section id="tab3" class="inner-vv-wrap">
                         <h3 class="head-vl">Past and Up-coming Events</h3>
                         <p><a href="https://www.facebook.com/Photon.SCNSM/videos/653607096744300" target="_blank" rel="noopener noreferrer">The similarities between gravity and electromagnetic</p>
                         <p> by Prof Arbab,  16 Sep.2023</a></p>
