--- a/team.html
+++ b/team.html
@@ -40,12 +40,12 @@
 	<div class="row">
         <div class="indent1">
 		<div class="col-md-6 portfolio-item team-class">
-				</h3> <img src="person.png" class="admin img-fluid" alt="Photon">Dr Elbasher M. E. Ahmed</h3>
+				</h3> <img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 			<p>Dr Elbasher M. E. Ahmed</p>
 			<p>Founder and director</p>
 			<p><strong> e-mail:</strong> <a href="elbasher@aims.ac.za">elbasher@aims.ac.za</a></p>
 		</div>
-		 <div style="clear: both; margin-bottom: 32pt"></div>
+		 <div style="clear: both; margin-bottom: 50pt"></div>
 		<div class="col-md-6 portfolio-item team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
@@ -56,7 +56,7 @@
 			<h3>
 				 </div>
 		 
-                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div style="clear: both; margin-bottom: 50pt"></div>
                         <div>
 						<div class="col-md-6 portfolio-item team-class">
  			<a>
@@ -67,7 +67,7 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div style="clear: both; margin-bottom: 50pt"></div>
                         <div>
 				<div class="col-md-6 portfolio-item team-class">
  			<a>
@@ -77,32 +77,32 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div style="clear: both; margin-bottom: 50pt"></div>
                         <div>
 					<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Maha Mohamed</h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Maha Mohamed</p>
 				<p>Services consultant</p>
 				<p><strong> e-mail:</strong> <a href="maha.osman.mohamed@gmail.com">maha.osman.mohamed@gmail.com</a></p>
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div style="clear: both; margin-bottom: 50pt"></div>
                         <div>
 						<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Migdad Yahya</h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Migdad Yahya</p>
 				<p>Media assistant </p>
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div style="clear: both; margin-bottom: 50pt"></div>
                         <div>
 							<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Gotyba Mohamed</h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Gotyba Mohamed</p>
 				<p>Student activities </p>
 			</a>
