--- a/services.html
+++ b/services.html
@@ -2,38 +2,31 @@
 <html lang="en">
 
 <head>
-  <!--
-    - Settings
-  -->
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  -->
+
   <link rel="stylesheet" href="style.css">
 
-  <!--
-    - fav icons
-  -->
+
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
 
-  <!-- 
-    - font link
-  -->
+ 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
     rel="stylesheet">
 
 </body>
-	</section>
+	
  <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Services </h3>
-                        Stuff....
+                        ...
 		 </div>
                         <div style="clear: both; margin-bottom: 32pt"></div>
                         <div>
