--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
           </li>
         </ul>
       </nav>
-		 <div style="clear: both; margin-bottom: 100pt"></div>
-		<img src="Photon.jpg" class="img.admin" alt="Photon">
+		 
     </div>
     </div>
 		
 <main>
 </main>
 		<section id="tab1" class="inner-vv-wrap">
+		<div style="clear: both; margin-bottom: 100pt"></div>
+		<img src="Photon.jpg" class="img.admin; team class" alt="Photon">
 		 <div style="clear: both; margin-bottom: 100pt"></div>
                         <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
 			     </section>
